# SigSent

./: .gitignore  LICENSE  README.md  all-gait.py  frames.gv  gait_finder.py  installation-method.txt  move_leg.py  requirements.txt  sigsent.rviz  startup-method.txt
CV/: human_detector.py
GUI/: basestation.ui  basestation_ui.py  gui_test.py  map.html
Gait/: adventure_time.py  all_high.py  all_low.py  arduino_test.ino  config.cfg  easier_spi_test.py  ga.py  gait.py  pi_spi_modules.py  spi_test.py  walker.py
Gait/arduino_test/: arduino_test.ino
Gait/arduino_testing/debugging_menu/: debugging_menu.ino
Gait/gait_trial_error/: AX12A.cpp  AX12A.h  gait_trial_error.ino
Gait/spi_plan_b/: spi_plan_b.ino
NEAT/: README.md  config-ann  data_collector.py  heightmap.world  main.py  requirements.txt  terrain_help.txt  topics.txt  vel_test.py
NEAT/terrain_classification/: config-ann  data_collector.py  neat_node.py  trainer.py
catkin_ws/: richie_ros  richie_ros.pub
catkin_ws/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
catkin_ws/install/: .rosinstall  setup.sh
catkin_ws/src/rpi_gpio/rpi_gpio/: CMakeLists.txt  package.xml  pip-requirements.txt  rosdep.yaml  setup.py
catkin_ws/src/rpi_gpio/rpi_gpio/config/: example.yaml  sigsent.yaml
catkin_ws/src/rpi_gpio/rpi_gpio/launch/: rpi_gpio.launch
catkin_ws/src/rpi_gpio/rpi_gpio/msg/: DigitalChange.msg  DigitalRead.msg
catkin_ws/src/rpi_gpio/rpi_gpio/nodes/: rpi_gpio_node.py
catkin_ws/src/rpi_gpio/rpi_gpio/srv/: DigitalWrite.srv
gazebo_models/Bot/: model.config  model.sdf
(+110 files in other folders)
